2008-04-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6042]
	* sysdeps/unix/sysv/linux/net/ethernet.h: Add a few more
	ETHERTYPE_* definitions.
	Patch partly by Aurelien Jarno <aurelien@aurel32.net>.

2008-04-07  Jakub Jelinek  <jakub@redhat.com>

	* stdlib/mbtowc.c (__no_r_state): Remove.
	(mbtowc): New static state variable.  Use it instead of
	__no_r_state.
	* stdlib/wctomb.c (__no_r_state): Remove extern decl.
	(__wctomb_state): New hidden variable.
	(wctomb): Use __wctomb_state instead of __no_r_state.
	* debug/wctomb_chk.c (__no_r_state): Remove extern decl.
	(__wctomb_state): New extern decl.
	(__wctomb_chk): Use __wctomb_state instead of __no_r_state.

2008-04-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5475]
	* resolv/res_init.c: Handle scope IDs in resolv.conf.

2008-04-07  Jakub Jelinek  <jakub@redhat.com>

	* malloc/mtrace.pl: Use $@ instead of $* to keep perl 5.10 quiet.

2008-04-06  Ulrich Drepper  <drepper@redhat.com>

	* po/nl.po: Update from translation team.

2008-03-31  Ulrich Drepper  <drepper@redhat.com>

	[BZ #6007]
	* string/strfry.c: Handle empty strings again.

2008-03-30  Ulrich Drepper  <drepper@redhat.com>

	[BZ #5443]
	* intl/dcigettext.c (__dcigettext): Get reader lock for locale data
	before looking for translation.
	* locale/duplocale.c: Transform __libc_setlocale_lock into rwlock.
	* locale/freelocale.c: Likewise.
	* locale/newlocale.c: Likewise.
	* locale/setlocale.c: Likewise.
	Based partially on a patch by ryo@np.css.fujitsu.com.

2008-03-30  Jakub Jelinek  <jakub@redhat.com>

	* intl/dcigettext.c (_nl_find_msg): Reread nconversions after
	acquiring wrlock.  Do conv_tab allocation while holding lock.
	* intl/Makefile: Add rules to build and run tst-gettext6.
	* intl/tst-gettext6.c: New test.
	* intl/tst-gettext6.sh: New file.

2008-03-30  Ulrich Drepper  <drepper@redhat.com>

	* po/nl.po: Update from translation team.

	* sysdeps/unix/opendir.c (__alloc_dir): If allocation fails for size